<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sun Savvy</string>
    <string name="app_name_title">Sun\nSavvy</string>

    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_landing">Landing Activity</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="title_activity_signup">Signup Activity</string>
    <string name="title_activity_register">Register Activity</string>
    <string name="title_activity_splash">Splash Activity</string>
    <string name="title_activity_settings">Settings Activity</string>
    <string name="title_activity_skin_type">Skintype Activity</string>

    <string name="action_settings">Settings</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_information">Information</string>
    <string name="menu_uv">UV</string>
    <string name="menu_spf_pa">SPF &amp; PA</string>
    <string name="menu_sun_protection">Sun Protection</string>
    <string name="menu_skin_type">Skin Type</string>
    <string name="menu_sunscreen">Sunscreen</string>
    <string name="menu_other">Other</string>
    <string name="menu_about_us">About Us</string>

    <string name="content_cloud">cloud</string>
    <string name="content_sun_moon">sun_moon</string>
    <string name="content_sunscreen">sunscreen</string>
    <string name="content_picture">picture</string>
    <string name="content_slogan">slogan</string>
    <string name="content_social">social</string>
    <string name="content_indicator">indicator</string>
    <string name="content_skintype">skintype</string>
    <string name="content_trivia">trivia</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_retype">Retype Password</string>
    <string name="hint_username">Userame</string>
    <string name="hint_skin_type">Skin Type</string>

    <string name="view_or">or</string>
    <string name="view_welcome">Welcome!</string>
    <string name="view_login">Login</string>
    <string name="view_sign_up">Sign Up</string>
    <string name="view_register">Register</string>
    <string name="view_unregistered">Did not have account yet?</string>
    <string name="view_registered">Already have an account?</string>
    <string name="view_subtitle_welcome">Hi, There!\nWelcome to Sun Savvy!</string>
    <string name="view_text_register">Please provide us your name and your skin type</string>
    <string name="view_trivia">Make sure to monitor the UV index in your vicinity and remember to apply sun protection to safeguard your skin!</string>
    <string name="view_uc_index">UV Index</string>
    <string name="view_spf">SPF</string>
    <string name="view_pa">PA</string>
    <string name="view_uv_a">UV A</string>
    <string name="view_uv_b">UV B</string>
    <string name="view_skin_type">Skin Type</string>
    <string name="view_protection_against">Protection Against</string>
    <string name="view_protect_yourself">Protect Yourself</string>
    <string name="view_protection_level">Protection Level</string>
    <string name="view_dark_mode">Dark Mode</string>
    <string name="view_alerts">Alerts</string>
    <string name="view_cohort_md">Bangkit 2023\nMobile Development</string>
    <string name="view_cohort_cc">Bangkit 2023\nCloud Computing</string>
    <string name="view_cohort_ml">Bangkit 2023\nMachine Learning</string>
    <string name="view_sunburn_time">Time to Sunburn</string>
    <string name="view_slogan_slip">slip</string>
    <string name="view_slogan_slop">slop</string>
    <string name="view_slogan_slap">slap</string>
    <string name="view_slogan_seek">seek</string>
    <string name="view_slogan_slide">slide</string>
    <string name="view_spf_level_category">SPF Level Category</string>
    <string name="view_sunsmart">SunSmart</string>
    <string name="view_about_us_description">We are a team focused on developing apps that aim to remind users about using sunscreen. We care about skin health and recognize the importance of protecting ourselves from harmful sun exposure</string>
    <string name="view_protection_weapon">Protection Weapon</string>
    <string name="view_uv_index_category">UV Index Category</string>
    <string name="view_cancer_council_victoria">Cancer Council Victoria</string>
    <string name="view_cancer_council_s_sunsmart_program">Cancer Council\'s SunSmart program</string>
    <string name="view_sid_the_seagull">Sid the Seagull</string>
    <string name="view_our_background">Our Background</string>
    <string name="view_our_team">Our Team</string>
    <string name="view_learn_more_about_skin_type">Learn more about skin type</string>
    <string name="view_update_profile">Edit Profile</string>
    <string name="view_content_empty">Empty Content</string>
    <string name="view_profile_updated">Profile updated</string>
    <string name="view_profile_created">Profile created, please login</string>
    <string name="view_sunsmart_content">
        \t\tEstablished by Cancer Council Victoria in 1981, the Slip, Slop, Slap slogan became the core campaign for the Cancer Council’s SunSmart program in educating both young and old Australians on the importance of sun protection.
        \n\n
        \t\tThe campaign featured Sid the Seagull slipping on a shirt, slopping on some sunscreen, and slapping on a hat in a catchy jingle and tune. This campaign showed great success in the decades to come as it shifted Australian attitudes and behaviours when it came to sun protection.
        \n\n
        \t\tIn 2007, the slogan was upgraded and relaunched to Slip, Slop, Slap, Seek, and Slide – adding two more goals to the sun protection regime – seek out shade, and slide on some wrap-around sunglasses!
    </string>

    <string name="button_login">Login</string>
    <string name="button_sign_up">Sign-Up</string>
    <string name="button_google">Login with Google</string>
    <string name="button_edit_profile">Edit Profile</string>
    <string name="button_log_out">Log Out</string>

    <string name="error_email_empty">Please provide email</string>
    <string name="error_email_invalid">This is not an email format</string>
    <string name="error_email_taken">This email was taken, try another email!</string>
    <string name="error_password_empty">Please insert password</string>
    <string name="error_password_wrong">Password did not match</string>
    <string name="error_password_not_match">Password not match</string>
    <string name="error_password_too_short">Password too short, it must be at least 6 characters</string>
    <string name="error_skin_type">Please select your skin type</string>

    <string name="prompt_connection_no">No connection</string>
    <string name="prompt_connection_check">Please re-check your internet connection</string>
    <string name="prompt_connection_connect">Connect</string>
    <string name="prompt_connection_cancel">Cancel</string>
    <string name="prompt_logout">Log Out</string>
    <string name="prompt_logout_check">Are you sure want to log out?</string>
    <string name="prompt_logout_logout">Log Out</string>
    <string name="prompt_logout_cancel">Cancel</string>

    <string name="placeholder_blank" tools:ignore="TypographyEllipsis">...</string>
    <string name="placeholder_app_version">Version Alpha 1.0</string>
    <string name="placeholder_subtitle">This is Title</string>
    <string name="placeholder_head">Head</string>
    <string name="placeholder_body">Body</string>
    <string name="placeholder_username">Uchiha Icha</string>
    <string name="placeholder_email">cumihitam@pak.kris</string>
    <string name="placeholder_clock">00:00</string>
    <string name="placeholder_meridiem">pm</string>
    <string name="placeholder_location">Bandung</string>
    <string name="placeholder_sunburn_time">25 Minutes</string>
    <string name="placeholder_pa">PA++</string>
    <string name="placeholder_spf">SPF 50+</string>
    <string name="placeholder_spf_number">50</string>
    <string name="placeholder_uv">60%</string>
    <string name="placeholder_uv_category">Medium UV Index</string>
    <string name="placeholder_uv_category_alt">Extreme</string>
    <string name="placeholder_uv_index_level">0</string>
    <string name="placeholder_uv_index_level_alt">11+</string>
    <string name="placeholder_uv_protection_level">Maximum Protection</string>
    <string name="placeholder_slogan">Slip</string>
    <string name="placeholder_slogan_description">Wear protective clothing.</string>
    <string name="placeholder_skin_type">II</string>
    <string name="placeholder_skin_type_full">Skin Type II</string>
    <string name="placeholder_skin_type_characteristic">Light skin\nLight/golden brown hair\nBrown/green eyes</string>
    <string name="placeholder_skin_type_explanation">usually burns first before slowly darkening the color</string>
    <string name="placeholder_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales nisi, vel dictum dolor.</string>
</resources>