<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/space_lg"
    android:backgroundTint="?attr/colorPrimary">

    <ImageView
        android:id="@+id/picture"
        android:layout_width="@dimen/size_lg"
        android:layout_height="@dimen/size_lg"
        android:contentDescription="@string/content_picture"
        android:src="@drawable/img_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="@dimen/space_md"
        android:text="@string/placeholder_username"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text_md"
        app:layout_constraintStart_toStartOf="@+id/picture"
        app:layout_constraintTop_toBottomOf="@+id/picture" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/placeholder_email"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="?attr/colorSecondary"
        android:textSize="@dimen/text_sm"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/skin_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/placeholder_skin_type"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="?attr/colorSecondary"
        android:textSize="@dimen/text_md"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/picture" />

</androidx.constraintlayout.widget.ConstraintLayout>