<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:clipChildren="false"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sky"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false">

        <ImageView
            android:id="@+id/cloud1"
            android:layout_width="164dp"
            android:layout_height="164dp"
            android:layout_marginBottom="156dp"
            android:contentDescription="@string/content_cloud"
            android:src="@drawable/img_cloud"
            app:layout_constraintBottom_toBottomOf="@+id/sun_moon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/cloud2"
            android:layout_width="264dp"
            android:layout_height="264dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/content_cloud"
            android:src="@drawable/img_cloud"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/cloud3"
            android:layout_width="356dp"
            android:layout_height="356dp"
            android:layout_marginTop="36dp"
            android:contentDescription="@string/content_cloud"
            android:elevation="@dimen/elevation_md"
            android:src="@drawable/img_cloud"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/sun_moon"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/content_sun_moon"
            android:src="@drawable/img_sun_moon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/uv_index_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md_min"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/placeholder_uv_index_level"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="@+id/sun_moon"
            app:layout_constraintEnd_toEndOf="@+id/sun_moon"
            app:layout_constraintStart_toStartOf="@+id/sun_moon"
            app:layout_constraintTop_toTopOf="@+id/sun_moon" />

        <TextView
            android:id="@+id/txt_uv_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginTop="-8dp"
            android:textSize="12sp"
            android:text="@string/view_uc_index"
            app:layout_constraintEnd_toEndOf="@+id/uv_index_level"
            app:layout_constraintStart_toStartOf="@+id/uv_index_level"
            app:layout_constraintTop_toBottomOf="@+id/uv_index_level" />

        <TextView
            android:id="@+id/clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_lg"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/placeholder_clock"
            android:textAlignment="textStart"
            android:textColor="?attr/colorAccent"
            android:textSize="@dimen/text_xl"
            app:layout_constraintBottom_toBottomOf="@+id/sun_moon"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/meridiem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_2xs"
            android:layout_marginBottom="@dimen/space_xsm"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/placeholder_meridiem"
            android:textAlignment="textStart"
            android:textColor="?attr/colorAccent"
            android:textSize="@dimen/text_sm"
            app:layout_constraintBottom_toBottomOf="@+id/clock"
            app:layout_constraintStart_toEndOf="@+id/clock"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_lg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sun_moon">

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/space_xs"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/placeholder_location"
                android:textAlignment="textStart"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/text_sm"
                app:drawableLeftCompat="@drawable/ic_geo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/uv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xs"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/placeholder_uv_category"
                android:textAlignment="textStart"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/text_md"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/location" />

            <TextView
                android:id="@+id/uv_index_level_alt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:background="@drawable/shape_circle_fill"
                android:backgroundTint="?attr/colorAccent"
                android:fontFamily="@font/montserrat_semi_bold"
                android:paddingHorizontal="@dimen/space_md"
                android:paddingVertical="@dimen/space_sm"
                android:text="@string/placeholder_uv_index_level"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/text_md"
                app:layout_constraintBottom_toBottomOf="@+id/uv_category"
                app:layout_constraintEnd_toEndOf="@+id/txt_skin_type"
                app:layout_constraintStart_toStartOf="@+id/txt_skin_type"
                app:layout_constraintTop_toTopOf="@id/location" />

            <TextView
                android:id="@+id/txt_skin_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/view_skin_type"
                android:textAlignment="textEnd"
                android:textColor="?attr/colorSecondaryVariant"
                android:textSize="@dimen/text_sm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txt_sunburn_time" />

            <TextView
                android:id="@+id/skin_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/placeholder_skin_type"
                android:textAlignment="textStart"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/text_md"
                app:layout_constraintBottom_toBottomOf="@+id/sunburn_time"
                app:layout_constraintEnd_toEndOf="@+id/txt_skin_type"
                app:layout_constraintStart_toStartOf="@+id/txt_skin_type" />

            <TextView
                android:id="@+id/txt_sunburn_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_lg"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/view_sunburn_time"
                android:textAlignment="textStart"
                android:textColor="?attr/colorAccent"
                android:textSize="@dimen/text_sm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/uv_category" />

            <TextView
                android:id="@+id/sunburn_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xs"
                android:drawablePadding="@dimen/space_xs"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/placeholder_sunburn_time"
                android:textAlignment="textStart"
                android:textColor="?attr/colorAccent"
                android:textSize="@dimen/text_md"
                app:drawableLeftCompat="@drawable/ic_clock"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_sunburn_time" />

            <TextView
                android:id="@+id/txt_protection_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2xl"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/view_protection_level"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="?attr/colorSecondaryVariant"
                android:textSize="@dimen/text_sm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sunburn_time" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_protection_level"
                style="@style/Card.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:outlineSpotShadowColor="?attr/colorOnSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_protection_level"
                tools:ignore="UnusedAttribute">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/wrapper_protection_level"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/pa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_lg"
                        android:layout_marginTop="@dimen/space_md"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/placeholder_pa"
                        android:textAlignment="textStart"
                        android:textColor="?attr/colorSecondary"
                        android:textSize="@dimen/text_sm"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/spf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/space_md"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/placeholder_spf"
                        android:textAlignment="center"
                        android:textColor="?attr/colorSecondary"
                        android:textSize="@dimen/text_xl"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/sunscreen"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginEnd="-64dp"
                android:contentDescription="@string/content_sunscreen"
                android:elevation="@dimen/elevation_xl"
                android:src="@drawable/img_sunscreen"
                app:layout_constraintBottom_toBottomOf="@+id/card_protection_level"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/card_protection_level" />

            <TextView
                android:id="@+id/txt_protect_yourself"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xl"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/view_protect_yourself"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="?attr/colorSecondaryVariant"
                android:textSize="@dimen/text_sm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_protection_level" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_protect_yourself"
                style="@style/Card.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:outlineSpotShadowColor="?attr/colorOnSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_protect_yourself"
                tools:ignore="UnusedAttribute">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/space_md"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="@dimen/zero"
                        android:layout_height="@dimen/zero"
                        android:layout_weight="1" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_slogan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:paddingStart="@dimen/space_lg"
                        android:paddingEnd="@dimen/space_md"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ObsoleteLayoutParam"
                        tools:listitem="@layout/item_slogan" />

                    <View
                        android:layout_width="@dimen/zero"
                        android:layout_height="@dimen/zero"
                        android:layout_weight="1"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>